--- a/art-gallery-website/location.css
+++ b/art-gallery-website/location.css
@@ -73,32 +73,9 @@
   }
   .location-map {
     height: 600px;
-
-    /*
-    background-image: -webkit-image-set(
-      url("assets/tablet/image-map.png") 1x,
-      url("assets/tablet/image-map@2x.png") 2x
-    );
-    background-image: image-set(
-      url("assets/tablet/image-map.png") 1x,
-      url("assets/tablet/image-map@2x.png") 2x
-    );
-    */
   }
 }
 
 /* Desktop */
 @media screen and (min-width: 1024px) {
-  /*
-  .location-map {
-    background-image: -webkit-image-set(
-      url("assets/desktop/image-map.png") 1x,
-      url("assets/desktop/image-map@2x.png") 2x
-    );
-    background-image: image-set(
-      url("assets/desktop/image-map.png") 1x,
-      url("assets/desktop/image-map@2x.png") 2x
-    );
-  }
-  */
 }
